[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0", features = ["json"]}

[dev-dependencies]
rand = "0.8"

[profile.dev]
opt-level = "s"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
